stylesheet.css
/* ... */
body > header h1 {
    padding-right: calc(var(--spacing) * 3);
    font-size: 20pt;
}

body > header > a {
    display: block;
    height: fit-content;
    padding-top: var(--spacing);
    padding-bottom: var(--spacing);
    width: calc(var(--spacing) * 30);
    border: 0;
    text-align: center;
    justify-content: center;
    text-decoration: none;
    color: #000000;
}

body > header div {
    display: flex;
    width: auto;
    flex-grow: 1;
    height: 100%;
    align-items: center;
    flex-direction: row;
    column-gap: calc(var(--spacing) * 2);
}

body > header div a {
    display: block;
    text-align: left;
    width: calc(var(--spacing) * 35);
    padding-left: var(--spacing);
    padding-top: var(--spacing);
    padding-bottom: var(--spacing);
    border: 0;
    text-decoration: none;
}

#contact-me {
    display: none
}

main {
    margin-left: auto;
    margin-right: auto;

    display: flex;
    flex-direction: column;
    gap: calc(var(--spacing) * 15);
    padding-right: calc(var(--spacing) * 5);
    padding-left: calc(var(--spacing) * 5);
    max-width: calc(var(--spacing) * 360);
}

#hero {
    border: 2px solid var(--secondary);
    border-bottom: none;
    color: var(--text-primary);
    width: 100%;
    height: calc(var(--spacing) * 120);
    display: flex;
    flex-direction: row;
    align-items: end;
    background-image: url('assets/images/hero.webp');
    background-position: 0% 30%;
    background-size: 120%;
    margin-bottom: 0;
}

#hero #container {
    position: relative;
    margin-left: calc(var(--spacing) * 8);
    display: flex;
    flex-direction: column;
    gap: calc(var(--spacing) * 2);
    align-items: start;
    padding-bottom: calc(var(--spacing) * 8);
}

#hero #container * {
    margin-top: 0;
    margin-bottom: 0;
}

#hero #container #button-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: calc(var(--spacing) * 2);
    width: 60%;

    margin-top: 0;
    margin-bottom: 0;
}

#hero #container #button-container a {
    aspect-ratio: 1/1;
    width: 100%;
    background-color: #FFFFFF;
    border: 0;
}

#hero-content {
    display: grid;
    color: #FFFFFF;
    grid-template-columns: 1fr 1fr;
    gap: 1.5px;
    border: 2px solid var(--secondary);
    background-color: var(--secondary);
    margin-top: 0;
    border-top: none;
}

#hero-content > #about-me {
    padding-top: calc(var(--spacing) * 3);
    padding-left: calc(var(--spacing) * 3);
    padding-right: calc(var(--spacing) * 3);
    background-color: var(--primary);
}
#hero-content > #misc {
    display: flex;
    flex-direction: column;
    gap: 1px;
    background-color: var(--secondary);
}

#hero-content > #misc > * {
    background-color: var(--primary);
    padding-top: calc(var(--spacing) * 3);
    padding-left: calc(var(--spacing) * 3);
    padding-right: calc(var(--spacing) * 3);
}

#tech-stack {
    border: 2px solid var(--cyan);
    color: var(--text-primary);
    width: 100%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: start;
    background-image: url('assets/images/techstack.webp');
    background-position: 0px -100px;
    background-size: 100%;
}

#tech-stack header {
    padding-left: calc(var(--spacing) * 5);
    width: calc(100% - var(--spacing) * 5);
    height: fit-content;
    font-size: var(--font-lg);

    display: flex;
    flex-direction: column;
    gap: 0;

}

#tech-stack header > *:first-child {
    color: var(--cyan);
    margin-top: calc(var(--spacing) * 4);
    margin-bottom: 0;
}
#tech-stack header p {
    margin-top: 0;
    margin-bottom: calc(var(--spacing) * 4);
}

#tech-stack #content {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    background-color: var(--secondary);
    width: 100%;
    gap: 1.5px;
}

#tech-stack #content > * {
    background-color: var(--primary);
    padding-top: calc(var(--spacing) * 3);
    padding-bottom: calc(var(--spacing) * 3);
    padding-left: calc(var(--spacing) * 3);
    padding-right: calc(var(--spacing) * 3);
}

#tech-stack #content ul {
    display: flex;
    flex-direction: column;
    gap: 1.5px;
}
#tech-stack #content ul li {
    display: flex;
    gap: calc(var(--spacing) * 5);
    flex-direction: row;
    align-items: center;

    padding-left: calc(var(--spacing)* 2);
    padding-right: calc(var(--spacing)* 2);
    padding-top: calc(var(--spacing)* 1.5);
    padding-bottom: calc(var(--spacing)* 1.5);

    background-color: var(--secondary);
    width: fit-content;
    height: fit-content;
    color: var(--text-primary);
    font-size: var(--font-md);
    font-family: "IBM Plex Mono", monospace;
    font-weight: 400;
    font-style: normal;
}

#tech-stack #content ul li p {
    margin-top: 0;
    margin-bottom: 0;
}

#title {
    background-color: var(--secondary);
    width: fit-content;
    color: var(--text-primary);
    padding-left: calc(var(--spacing) * 2);
    padding-right: calc(var(--spacing) * 2);
    padding-top: calc(var(--spacing) * 2);
    padding-bottom: calc(var(--spacing) * 2);
    margin-bottom: calc(var(--spacing) * 2);
}

#education{
    border: 2px solid var(--red);
    color: var(--text-primary);
    width: 100%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: start;
}
#education header {
    padding-left: calc(var(--spacing) * 5);
    width: calc(100% - var(--spacing) * 5);
    height: fit-content;
    font-size: var(--font-lg);
    display: flex;
    flex-direction: column;
    gap: 0;
    background-image: url('assets/images/education.webp');
    background-position: 0% 30%;
    background-size: 100%;
}
#education header > *:first-child {
    color: var(--red);
    margin-top: calc(var(--spacing) * 4);
    margin-bottom: 0;
}
#education header p {
    margin-top: 0;
    margin-bottom: calc(var(--spacing) * 4);
}
/* ... */

